--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+:root {
+  --header-height: 50px;
+  --dropdown-height: 40px;
+  --background: #1f37d3;
+  --background-dark: #041899;
+  --background-light: #3f51b5;
+  --text-color: #ffffff;
+  --foreground-color: #aaaaaa;
+  --text-color-dark: #000000;
+  --text-color-secondary: #eeeeee;
+}
