--- a/client/src/components/modules/Navbar.css
+++ b/client/src/components/modules/Navbar.css
@@ -27,7 +27,7 @@
 }
 
 .Navbar-link {
-  margin: 10px 20px;
+  padding: 10px 20px;
 }
 
 .Navbar-links {
@@ -52,7 +52,8 @@
 .Navbar-dropdown-username-wrap {
   display: flex;
   height: var(--header-height);
-  margin: 0px 20px;
+  padding-top: 0px;
+  padding-bottom: 0px;
   align-items: center;
   flex-direction: row;
 }
