--- a/client/src/components/pages/Landing.css
+++ b/client/src/components/pages/Landing.css
@@ -1,30 +1,55 @@
 .Home {
   height: calc(100vh - var(--header-height));
   color: var(--text-color);
+  /* font-family: var(--font-family-gothic) !important; */
+  padding:50px;
 }
 
 .Home-title {
-  background: linear-gradient(
+  background-color: var(--background);
+  /* background: linear-gradient(
     180deg,
     var(--background-light) 0%,
     var(--background-dark) 100%
-  );
+  ); */
   display: flex;
   height: 60vh;
-  justify-content: space-around;
+  justify-content: space-between;
+  /* align-items: center; */
+  width:100%
+}
+
+.Home-title-text {
+  flex: 1;
+  color: var(--text-color);
+  font-size:30px;
+  text-align: left;
+  font-family: "Century Gothic", "Apple Gothic","Avenir","Gothic A1", sans-serif;
+}
+h1.Home-title-text {
+  font-weight: bold;
+}
+
+.Home-title-demo {
+  flex: 1;
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
-
-.Home-logo {
-  height: 40vh;
+.Home-demo-image {
+  max-width: 100%; /* Prevent the image from being wider than its container */
+  max-height: 100%; /* Prevent the image from being taller than its container */
+  object-fit: contain; /* Ensure the image maintains its aspect ratio */
 }
 
-h1.Home-title-text {
-  font-size: 6rem;
+.Home-try-button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
 }
-
-h2.Home-title-text {
-  font-size: 4rem;
-  margin: 0.5rem 0;
-  color: var(--text-color-secondary);
+.TryNowButton {
+  font-size: 2rem;
+  padding: 1rem 2rem;  
+  font-family: "Century Gothic", "Apple Gothic","Avenir","Gothic A1", sans-serif;
 }
