--- a/client/src/components/pages/Login.css
+++ b/client/src/components/pages/Login.css
@@ -6,20 +6,19 @@
 }
 
 .Login-box {
-  width: max(400px, 30%);
+  width: max(500px, 40%);
   padding: 30px;
   margin-top: 50px;
-  /* border: 1px solid var(--text-color); */
   border-radius: 20px;
-  height: max(200px, 25%);
+  height: 350px;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: center;
   background-color: var(--background-dark);
   color: var(--text-color);
 }
 
-/* .Login-title {
+.Login-title {
   font-size: 2em;
   padding: 20px;
-} */
+}
