--- a/client/src/components/pages/Landing.css
+++ b/client/src/components/pages/Landing.css
@@ -10,7 +10,7 @@
     var(--background-dark) 100%
   );
   display: flex;
-  height: 60vh;
+  height: max(500px, 60vh);
   justify-content: space-around;
   align-items: center;
   color: var(--text-color-secondary);
