--- a/client/src/components/pages/Library.css
+++ b/client/src/components/pages/Library.css
@@ -1,3 +1,22 @@
 .Library-design-list {
   display: flex;
+  flex-wrap: wrap;
+  background-color: var(--background);
+  height: calc(100vh - var(--header-height));
+  padding: 30px;
+}
+
+.Library-new {
+  font-size: 1.2em;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+  width: 100%;
+  padding: 15px;
+}
+
+.Library-new-icon {
+  filter: invert(var(--darkmode-invert));
+  height: min(100%, 120px);
 }
