--- a/client/src/components/pages/Library.css
+++ b/client/src/components/pages/Library.css
@@ -4,6 +4,7 @@
   background-color: var(--background);
   height: calc(100vh - var(--header-height));
   padding: 30px;
+  overflow: scroll;
 }
 
 .Library-new {
