--- a/client/src/components/modules/LandingNavbar.css
+++ b/client/src/components/modules/LandingNavbar.css
@@ -49,6 +49,7 @@
   align-self: flex-start;
   display: flex;
   flex-direction: column;
+  overflow: hidden;
 }
 
 .Navbar-dropdown-username-wrap {
