--- a/client/src/index.css
+++ b/client/src/index.css
@@ -14,6 +14,7 @@
   --text-color-secondary: #dddddd;
   --text-color-dark: #333333;
   --darkmode-invert: 100%;
+  --canvas-background: #333333;
 }
 
 [data-theme="light"] {
@@ -26,4 +27,5 @@
   --text-color-secondary: #333333;
   --text-color-dark: #ffffff;
   --darkmode-invert: 0%;
+  --canvas-background: #ffffff;
 }
