--- a/client/src/components/pages/Library.css
+++ b/client/src/components/pages/Library.css
@@ -21,3 +21,14 @@
   filter: invert(var(--darkmode-invert));
   height: min(100%, 120px);
 }
+
+.Library-upload-icon {
+  /* filter: invert(var(--darkmode-invert)); */
+  height: min(40px);
+    margin: 5px 20px;
+}
+
+.Library-upload-button {
+  display: flex;
+  align-items: center;
+}
