--- a/client/src/components/pages/Library.css
+++ b/client/src/components/pages/Library.css
@@ -5,6 +5,7 @@
   height: calc(100vh - var(--header-height));
   padding: 30px;
   overflow: scroll;
+  align-content: flex-start;
 }
 
 .Library-new {
@@ -25,10 +26,16 @@
 .Library-upload-icon {
   /* filter: invert(var(--darkmode-invert)); */
   height: min(40px);
-    margin: 5px 20px;
+  margin: 5px 20px;
 }
 
 .Library-upload-button {
   display: flex;
   align-items: center;
+}
+
+.Library-uploaded-file {
+  display: flex;
+  align-items: center;
+  gap: 8px;
 }
