--- a/client/src/components/pages/Docs.css
+++ b/client/src/components/pages/Docs.css
@@ -1,25 +1,20 @@
-.Page {
-    margin-left: 150px;
-    margin-right: 150px;
-    margin-top: 50px;
-    padding: 20px;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    background-color: #f0f0f0;
-    border-radius: 8px;
+:root {
+  --sidebar-width: max(250px, 20vw);
 }
-.Wrapper{
-    /* padding:30px; */
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+
+.Docs {
+  display: flex;
+  height: 100%;
 }
-h1 {
-    font-size: 2.5rem;
-    color: #333;
-    margin-bottom: 20px;
+
+.Docs-sidebar {
+  width: var(--sidebar-width);
+  background-color: var(--background-dark);
+  padding: 20px;
 }
-h2 {
-    font-size: 2rem;
-    color: #333;
-    margin-bottom: 15px;
+
+.Docs-content {
+  padding: 40px;
+  width: calc(100vw - var(--sidebar-width));
 }
+
