--- a/client/src/components/modules/DesignCard.css
+++ b/client/src/components/modules/DesignCard.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+    box-shadow: 0px 0px 10px var(--shadow-color);
 }
 
 .Design-titlebar {
@@ -38,6 +39,7 @@
 
 .Design-desc {
   margin-top: 10px;
+  font-size: 1em;
 }
 
 .Design-footer {
