--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,6 +15,7 @@
   --text-color-dark: #333333;
   --darkmode-invert: 100%;
   --canvas-background: #333333;
+  --shadow-color: rgba(0, 0, 0, 0.5);
 }
 
 [data-theme="light"] {
@@ -28,4 +29,5 @@
   --text-color-dark: #ffffff;
   --darkmode-invert: 0%;
   --canvas-background: #ffffff;
+  --shadow-color: rgba(0, 0, 0, 0.2);
 }
