--- a/client/src/components/pages/Editor.css
+++ b/client/src/components/pages/Editor.css
@@ -6,9 +6,12 @@
 
 .Editor-sidebar {
   width: 40vw;
+  height:100%;
+  display: flex;
+  flex-direction: column;
 }
 .Viewer-container {
+  flex:1;
   width: 100%;
-  height: 80vh;
   display: flex;
 }
