--- a/client/src/components/modules/DesignCard.css
+++ b/client/src/components/modules/DesignCard.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-    box-shadow: 0px 0px 10px var(--shadow-color);
+  box-shadow: 0px 0px 10px var(--shadow-color);
 }
 
 .Design-titlebar {
@@ -35,6 +35,10 @@
   margin-left: 15px;
   margin-right: 15px;
   height: 94px;
+}
+
+.Design-content:hover {
+  cursor: pointer;
 }
 
 .Design-desc {
